@@ -1,5 +1,6 @@
 package ru.practicum.shareit.user;
 
+import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import ru.practicum.shareit.exception.NotFoundUserException;
@@ -7,34 +8,42 @@ import ru.practicum.shareit.user.dto.UpdateUserRequest;
 import ru.practicum.shareit.user.dto.UserDto;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
+@Transactional
 @Service
 public class UserServiceImpl implements UserService {
     private final UserRepository userRepository;
 
+    @Override
     public List<UserDto> getAllUsers() {
-        return userRepository.findAllUsers().stream().map(UserMapper::mapToUserDto).toList();
+        return userRepository.findAll().stream().map(UserMapper::mapToUserDto).collect(Collectors.toList());
     }
 
+    @Override
     public UserDto getUserById(long userId) {
-        User user = userRepository.findUserById(userId).orElseThrow(() -> new NotFoundUserException(userId));
+        User user = userRepository.findById(userId).orElseThrow(() -> new NotFoundUserException(userId));
         return UserMapper.mapToUserDto(user);
     }
 
+    @Override
     public UserDto createUser(User user) {
-        return UserMapper.mapToUserDto(userRepository.createUser(user));
+        return UserMapper.mapToUserDto(userRepository.save(user));
     }
 
+    @Override
     public UserDto updateUser(UpdateUserRequest updateUserRequest, long userId) {
         updateUserRequest.setId(userId);
-        userRepository.findUserById(userId).orElseThrow(() -> new NotFoundUserException(userId));
-        return UserMapper.mapToUserDto(userRepository.updateUser(updateUserRequest));
+        User user = userRepository.findById(userId).orElseThrow(() -> new NotFoundUserException(userId));
+        return UserMapper.mapToUserDto(userRepository.save(UserMapper.updateUserFields(updateUserRequest, user)));
     }
 
+    @Override
     public UserDto deleteUser(long userId) {
-        userRepository.findUserById(userId).orElseThrow(() -> new NotFoundUserException(userId));
-        return UserMapper.mapToUserDto(userRepository.deleteUser(userId));
+        User user = userRepository.findById(userId).orElseThrow(() -> new NotFoundUserException(userId));
+        userRepository.delete(user);
+        return UserMapper.mapToUserDto(user);
     }
 
 }
